# NumericalMethodsLab2

./: CMakeLists.txt  Task1.txt  Tau(V0).txt  newton_attractors.txt  report.md
Lab1/: Task1.cpp
Lab2/: Task2.cpp
Lab3/: Task3.cpp
Methods/: Complex.h  Dihotomia.h  General.h  Iteration.h  Newton.h  diff.h
